# cgen

./: .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
cgen/: __init__.py  cuda.py  infrastructure.py  ispc.py  mapper.py  opencl.py  preprocessor.py  sycl.py  version.py
cgen/preprocessor/: __init__.py
codepy/: bpl.py  compile.py  cuda.py  elementwise.py  jit.py  libraries.py  toolchain.py  tools.py
codepy/cgen/: __init__.py  opencl.py
doc/: Makefile  cgen.rst  conf.py  faq.rst  index.rst  upload-docs.sh
doc/source/: cgen.rst  conf.py  faq.rst  index.rst  jit.rst
examples/: hello-cgen.py
include/codepy/: bpl.hpp
src/: bpl.py  cgen.py  jit.py  libraries.py
src/cgen/: __init__.py  cuda.py
test/: demo.py  demo_plain.py  identical_symbols.py  nvcc-test.py  nvccTest.py  test_cgen.py  test_identical_symbols.py
